--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body id="indexBody">
     <div class="MainHighlightArea" id="HighlightedStoryArea">
-        
+
+    </div>
+    <div class="DevlogHighlights">
+        <h2>Latest devlogs</h2>
+        <table id="DevlogTable">
+        </table>
     </div>
     <!-- Your HTML content goes here -->
     <script src="./scripts/index.js"></script>
