Added projects area

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     </div>
     <div class="DevlogHighlights">
         <h2>Latest devlogs</h2>
-        <table id="DevlogTable">
-        </table>
+        <div id="DevlogTable">
+        </div>
+    </div>
+    <div class="DevlogHighlights">
+        <h2>Projects</h2>
+        <div id="ProjectTable">
+        </div>
     </div>
     <!-- Your HTML content goes here -->
     <script src="./scripts/index.js"></script>
