Finnished devlogs 0 and 1

--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
 
     </div>
     <div class="DevlogHighlights">
-        <h2>Latest devlogs</h2>
+        <h2>Devlogs</h2>
         <div id="DevlogTable">
-        </div>
-    </div>
-    <div class="DevlogHighlights">
-        <h2>Projects</h2>
-        <div id="ProjectTable">
         </div>
     </div>
     <!-- Your HTML content goes here -->
