--- a/Pages/devlog.html
+++ b/Pages/devlog.html
@@ -8,6 +8,9 @@
 <body>
     <div id="BannerImage"></div>
     <div id="TextArea"></div>
+    <div id="NavigationBar">
+
+    </div>
     <script src="../scripts/devlog.js"></script>
 </body>
 </html>
