--- a/Pages/devlog.html
+++ b/Pages/devlog.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeekWorks</title>
     <link rel="stylesheet" href="devlog.css">
+    <link rel="icon" type="image/x-icon" href="GeekWorksLogo.png">
 </head>
 <body>
     <div id="BannerImage"></div>
