Changed to editor side rendering

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 <body id="indexBody">
     <div class="MainHighlightArea" id="HighlightedStoryArea">
 
-    </div>
+<img class="MainSlide" src="Images/Devlog1/Banner.png" alt="This is highlight image"></div>
     <div class="DevlogHighlights">
         <h2>Devlogs</h2>
-        <div id="DevlogTable">
-        </div>
+        <div id="DevlogTable"><div style="cursor: pointer;" onclick="window.location = 'Pages/devlog1.html'" class="DescriptionRow"><h3>Devlog 1: Beyond geometrical shapes</h3><div class="imgTd"><img src="Images/Devlog1/Thumbnail.png"></img></div><div class="Description"><p>In this devlog, I will be explaining the fundamentals of, and some of my experiences from developing, V-Slicing, a brand-new slicing method built on simple ideas. Designed to overcome the limitations of current methods. I also showcase a test print sliced with one of the development versions. We will look at the limitations of this basic implementation of the method.</p></div></div><div style="cursor: pointer;" onclick="window.location = 'Pages/devlog0.html'" class="DescriptionRow"><h3>Devlog 0: Journey To Slicing's Bleeding Edge</h3><div class="imgTd"><img src="Images/Devlog0/Thumbnail.png"></img></div><div class="Description"><p>Join me at the forefront of 3D printing innovation. In this introductory devlog, we'll explore groundbreaking slicing techniques that challenge the status quo. From conical slicing to arc overhangs, we'll examine these alternative approaches their limitations, and advantages that form the foundation for V-Slicing.</p></div></div></div>
     </div>
     <!-- Your HTML content goes here -->
     <script src="./scripts/index.js"></script>
