--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta charset="UTF-8">
+ <link rel="canonical" href="https://geekworksresearch.com/">
+    <meta name="description" content="Join me on my journey to develop a novel non-planar slicer, for low clearence machines like the Ender3, based on the V-Slicing algorithm as part of a series of devlogs.  Follow my devlog series as we push the limits of 3D printing further than ever before.">   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeekWorks</title>
     <link rel="stylesheet" href="mainStyle.css">
     <link rel="icon" type="image/x-icon" href="GeekWorksLogo.png">
 </head>
 <body id="indexBody">
-    <div class="MainHighlightArea" id="HighlightedStoryArea">
+<h1>GeekWorks</h1><div class="MainHighlightArea" id="HighlightedStoryArea">
 
 <img class="MainSlide" src="Images/Devlog1/Banner.png" alt="This is highlight image"></div>
     <div class="DevlogHighlights">
