Reduced Image Size

--- a/Pages/devlog0.html
+++ b/Pages/devlog0.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="canonical" href="https://geekworksresearch.com/Pages/Devlog0.html">
+    <link rel="canonical" href="https://geekworksresearch.com/Pages/devlog0.html">
     <meta name="description" content="Join me at the forefront of 3D printing innovation. In this introductory devlog, we'll explore groundbreaking slicing techniques that challenge the status quo. From conical slicing to arc overhangs, we'll examine these alternative approaches their limitations, and advantages that form the foundation for V-Slicing.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeekWorks Devlog 0: Journey To Slicing's Bleeding Edge</title>
