--- a/Pages/devlog1.html
+++ b/Pages/devlog1.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="canonical" href="https://geekworksresearch.com/Pages/Devlog1.html">
+    <link rel="canonical" href="https://geekworksresearch.com/Pages/devlog1.html">
     <meta name="description" content="In this devlog, I will be explaining the fundamentals of, and some of my experiences from developing, V-Slicing, a brand-new slicing method built on simple ideas. Designed to overcome the limitations of current methods. I also showcase a test print sliced with one of the development versions. We will look at the limitations of this basic implementation of the method.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeekWorks Devlog 1: Beyond geometrical shapes</title>
