--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <meta charset="UTF-8">
  <link rel="canonical" href="https://geekworksresearch.com/">
     <meta name="description" content="Join me on my journey to develop a novel non-planar slicer, for low clearence machines like the Ender3, based on the V-Slicing algorithm as part of a series of devlogs.  Follow my devlog series as we push the limits of 3D printing further than ever before.">   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeekWorks: Blog</title>
+    <title>Crystalite: Non-planar supportless slicing for the everyday 3D printer</title>
     <link rel="stylesheet" href="mainStyle.css">
     <link rel="icon" type="image/x-icon" href="GeekWorksLogo.png">
 </head>
