fixed up some stuff

--- a/Pages/Devlog2.html
+++ b/Pages/Devlog2.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="canonical" href="https://geekworksresearch.com/Pages/Devlog2">
-    <meta name="description" content="Join me on my journey towards supportless slicing in this devlog where we tackle rounding errors and optimize our methods for immense amounts of data. We will explore how specific algorithms can be used to voxelize a mesh.">
+    <meta name="description" content="Join me on my journey towards supportless slicing in this devlog where we tackle rounding errors and optimize our methods for immense amounts of data. We will explore how specific algorithms can be used to voxelize a mesh. We will look at 3 methods to voxelize a triangle mesh and why out these I chose a specific option in the end.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeekWorks Devlog 2: Block-by-Block</title>
     <link rel="stylesheet" href="devlog.css">
